ops/profileservice/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app
  namespace: fsi
spec:
  selector:
    matchLabels:
      app: go-app
  replicas: 1
  template:
    metadata:
      labels:
        app: go-app
    spec:
      containers:
        - name: go-app-container
          image: profileservice
          resources:
            limits:
              cpu: "400m"
              memory: 512Mi
            requests:
              cpu: "200m"
              memory: 256Mi
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: "service-account"
              mountPath: "/var/goog/secrets"
              readOnly: true
      volumes:
        - name: "service-account"
          secret:
            secretName: svc-key
