ops/profileservice/profile-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: profile-vs
  namespace: fsi
spec:
  hosts:
  - "*"
  gateways:
  - http-gateway
  http:
  - match:
    - uri:
        prefix: /user
    route:
    - destination:
        host: go-app-svc
        port:
          number: 8080
